--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -3,6 +3,8 @@
 }
 
 .jumbotron {
+    padding: 2rem 1rem;
+    margin-bottom: 2rem;
     background-image: linear-gradient(to right, #007bff, #000);
     color: #fff
 }
